# ifcgeometryrepair

./: .gitignore  pyproject.toml
app/: config.py  external_candidates.py  external_shell.py  gbxml_export.py  geometry_worker.py  ifc_editing.py  ifc_extractor.py  internal_boundaries.py  job_service.py  main.py  mesh_normalizer.py  models.py  opening_integration.py  output_export.py  polygon_clipper.py  preflight.py  viewer_manifest.py
app/static/: app.js  index.html  styles.css  viewer.js
ifc-file/: 2lsb_surfaces.gbxml  alpha_wrap_test_debug.json  energyplus_fault_stress_debug.json
ifcgeometryrepair.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pytest-tmp/test_empty_openings_returns_em0/test_job/geometry/: opening_integration.json
pytest-tmp/test_empty_payloads_produce_va1/: output.gbxml
pytest-tmp/test_payload_contains_expected0/test_job/geometry/: opening_integration.json
pytest-tmp/test_populated_payloads_produc2/: output.gbxml
pytest-tmp/test_returns_output_path0/: output.xml
pytest-tmp/test_summary_counts_are_correc0/: output.xml
pytest-tmp/test_xml_excludes_tiny_surface0/: output.xml
pytest-tmp/test_xml_exports_subtracted_ar0/: output.xml
tests/: ifc_factory.py  test_energyplus_stress_case.py  test_external_candidates.py  test_external_shell.py  test_ifc_editing.py  test_internal_boundaries.py  test_jobs.py  test_mesh_normalizer.py  test_native_alpha_wrap.py  test_opening_integration.py  test_output_export.py  test_preflight.py  test_upload_form_validation.py  test_viewer_manifest.py
tests/fixtures/: sample.ifc
tmp/chrome-profile/: Local State
tmp/chrome-profile/Crashpad/: metadata
tmp/chrome-profile/Crashpad/reports/: 1fc32419-9992-4376-bfce-04ae033402e9.dmp  8f9da612-81cc-4dee-9ed0-32937c321c60.dmp
tmp/codex_alpha_wrap_jobs/: alpha_shared_wall.ifc  alpha_single_room.ifc
tmp/codex_alpha_wrap_jobs/ba7d8b2b-d59e-4043-802a-9cd4862b1c7e/: debug.json  input.ifc  logs.txt  output.json
tmp/codex_alpha_wrap_jobs/ba7d8b2b-d59e-4043-802a-9cd4862b1c7e/geometry/: 2lsb_surfaces.gbxml  2lsb_surfaces.xml  clash_report.json  gbxml_preflight.json  geometry_summary.json  internal_boundaries.json  opening_integration.json  preflight.json  repair_report.json  repair_request.json  repair_response.json  request.json  result.json  viewer_manifest.json
tmp/codex_alpha_wrap_jobs/d69edd26-161c-45ec-965a-451b2c9c42a6/: debug.json  logs.txt  output.json
tmp/codex_alpha_wrap_jobs/d69edd26-161c-45ec-965a-451b2c9c42a6/geometry/: 2lsb_surfaces.gbxml  2lsb_surfaces.xml  clash_report.json  gbxml_preflight.json  geometry_summary.json  internal_boundaries.json  opening_integration.json  preflight.json  repair_report.json  repair_request.json  (+4 more)
tmp/codex_alpha_wrap_jobs/f7e4a98c-f23e-4ef3-a522-f731d39ae6e0/: debug.json  logs.txt  output.json
tmp/codex_ep_pytest/test_energyplus_stress_case_fl0/: energyplus_fault_stress_debug.json
tmp/codex_full_alpha_pytest/test_energyplus_stress_case_fl0/: energyplus_fault_stress_debug.json
tmp/codex_full_alpha_pytest/test_populated_payloads_produc0/: output.xml
tmp/codex_full_pytest/test_empty_payloads_produce_va0/: output.xml
tmp/codex_full_pytest/test_energyplus_stress_case_fl0/: energyplus_fault_stress_debug.json
tmp/codex_full_validation_pytest/test_energyplus_stress_case_fl0/: energyplus_fault_stress_debug.json
tmp/codex_full_validation_pytest/test_gbxml_keeps_surface_when_0/: output.gbxml
tmp/codex_full_validation_pytest/test_multiple_openings_attach_0/: output.gbxml
tmp/codex_full_validation_pytest_2/test_energyplus_stress_case_fl0/: energyplus_fault_stress_debug.json
tmp/codex_native_fixture_jobs/64769100-9305-4e92-b3fa-6fd08e2086ea/: debug.json  input.ifc  logs.txt  output.json
tmp/codex_native_fixture_jobs/80f2c5b6-ffa6-45a8-bb7f-1725d850dd25/: debug.json  input.ifc  logs.txt  output.json
tmp/codex_sample_jobs/1f4e4216-9f4e-43ff-b779-1a20d2d4e5ab/: debug.json  logs.txt  output.json
tmp/codex_sample_jobs_multi/3bfdf3df-00a0-4903-a8bd-4a3d5e51d915/: debug.json  logs.txt  output.json
tmp/codex_sample_jobs_multi/519db05b-9d55-4dfd-9e55-ae200def5bf2/: debug.json  logs.txt  output.json
tmp/codex_sample_jobs_multi/83c9faed-9771-491d-9a6f-39367e178998/: debug.json  logs.txt  output.json
tmp/energyplus_stress_jobs/f8be102b-b702-4e66-8671-b06e7652489d/: debug.json  input.ifc  logs.txt  output.json
tools/: energyplus_stress_case.py
worker/: CMakeLists.txt  README.md
worker/src/: common.cpp  common.hpp  main.cpp  shell_worker.cpp
(+257 files in other folders)
