[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcgeometryrepair"
version = "0.1.0"
description = "FastAPI upload shell and filesystem-backed job runner for IFC processing"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "ifcopenshell>=0.8.4,<0.9",
  "numpy>=2.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "shapely>=2.0,<3.0",
  "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
